# MiniOICQ

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  clean.sh
.github/workflows/: qt.yml
client/: CMakeLists.txt  client.pro
client/MINIOICQ/databases/: client_db_1.db  localUser.db
client/MINIOICQ/sql/: client.sql  test_initial.sql
client/src/: calculator.cpp  calculator.h  client  main.cpp  resources.qrc  src.pro
client/src/chat/: chat_manager.cpp  chat_manager.h  chat_model.cpp  chat_model.h  chat_view.cpp  chat_view.h  chat_viewmodel.cpp  chat_viewmodel.h
client/src/common/: chat_info.h  message.h  misc.cpp  misc.h  user_info.h
client/src/list/: list_model.cpp  list_model.h  list_proxymodel.cpp  list_proxymodel.h  list_view.cpp  list_view.h  list_viewmodel.cpp  list_viewmodel.h
client/src/login/: login_model.cpp  login_model.h  login_proxymodel.cpp  login_proxymodel.h  login_view.cpp  login_view.h  login_viewmodel.cpp  login_viewmodel.h  login_vm.cpp  login_vm.h  login_window.cpp  login_window.h  user_info.h
client/src/message/: message.h
client/src/websocket/: websocket.cpp  websocket.h
docs/: protocol.md  qmake.md  qsignal.md  qsql.md  qtcore.md  qtmodel.md  qwidget.md
server/: CMakeLists.txt  README.md  initial.sql  localhost.pem  minioicq.py  requirements.txt  server.sql
